fix z-index

--- a/Home/#source/scss/_header.scss
+++ b/Home/#source/scss/_header.scss
@@ -7,6 +7,7 @@
 	align-items: center;
 	padding: 10px 10px;
 	min-height: 60px;
+	position: relative;
 	z-index: 100;
 	&__row {
 	}
