--- a/Home/css/style.css
+++ b/Home/css/style.css
@@ -848,6 +848,7 @@ body.ie .ibg img {
   align-items: center;
   padding: 10px 10px;
   min-height: 60px;
+  position: relative;
   z-index: 100;
 }
 
